--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
 
-   <head>
-<title>PIZZA-NOOBZ</title>
-<link rel="icon" href="C:\Users\suntu\Pictures\Saved Pictures\pizza-logo-design_9845-319.webp" type="image/x-icon" />
-<link rel="stylesheet" type="text/css" href="style.css">
-   </head>
-   <body>
- <div class="background">
- </div>
-   </body>
+<head>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+   <title>PIZZA-NOOBZ</title>
+   <link rel="icon" href="C:\Users\suntu\Pictures\Saved Pictures\pizza-logo-design_9845-319.webp" type="image/x-icon" />
+   <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+   <h1>VREI O PIZZA?</h1>
+   <div class="background">
+   </div>
+</body>
 
 </html>
