--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-   <title>PIZZA-NOOBZ</title>
+   <title>PIZZA-NOOBZ2</title>
    <link rel="icon" href="C:\Users\suntu\Pictures\Saved Pictures\pizza-logo-design_9845-319.webp" type="image/x-icon" />
    <link rel="stylesheet" href="styles.css">
 </head>
