--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
    <h1>VREI O PIZZA?</h1>
-   <img class="img-googleplay" src="img/play.png" alt="google-play">
+   <img class="img-googleplay" src="img/play.jpg" alt="google-play">
    <div class="background">
    </div>
 </body>
