--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-   <link rel="icon" href="" type="christopher-farrugia-RVXgqEv2lR4-unsplash.jpg" type="image/x-icon" />
+   <link rel="icon" href=" type="christopher-farrugia-RVXgqEv2lR4-unsplash.jpg" type="image/x-icon" />
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
