--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-   <link rel="icon" href=" type="christopher-farrugia-RVXgqEv2lR4-unsplash.jpg" type="image/x-icon" />
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -10,10 +9,10 @@
    <link rel="icon" href="C:\Users\suntu\Pictures\Saved Pictures\pizza-logo-design_9845-319.webp" type="image/x-icon" />
    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
    <h1>VREI O PIZZA?</h1>
-
+   <button name="contact_button" type="button">
+      contact
    <div class="background">
    </div>
 </body>
