--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <h1>VREI O PIZZA?</h1>
+   <ul>
+      <li><a href="#">Meniu</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">Comanda</a></li>
+
+   </ul>
    <div class="background">
    </div>
 </body>
