--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <ul>
+   <nav>
+      <ul>
       <li><a href="#">Meniu</a></li>
       <li><a href="#">Contact</a></li>
       <li><a href="#">Comanda</a></li>
-
-   </ul>
+      </ul>
+   </nav>
    <div class="background">
    </div>
 </body>
