--- a/index.html
+++ b/index.html
@@ -1,26 +1,432 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-   <meta charset="utf-8">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-   <title>PIZZA-NOOBZ</title>
-   <link rel="icon" href="C:\Users\suntu\Pictures\Saved Pictures\pizza-logo-design_9845-319.webp" type="image/x-icon" />
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>PIZZA-NOOBS</title>
    <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+   
+<section id="Acasa">
    <nav>
+      <div class="logo">
+<img src="pizza2.png" height="70">
+      </div>
       <ul>
-      <li><a href="index.html">Acasa</a></li>
-      <li><a href="meniu.html">Meniu</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="comanda.html">Comanda</a></li>
-      </ul>
-   </nav>
-   <div class="background">
-   </div>
-</body>
+         <li><a href="#Acasa">Acasa</a></li>
+         <li><a href="#Meniu">Meniu</a></li>
+         <li><a href="#Galerie">Galerie</a></li>
+         <li><a href="#Review">Review</a></li>
+         <li><a href="#Comanda">Comanda</a></li>
 
+      </ul>
+      <div class="icon">
+         <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
+         <i class="fa-regular fa-heart"></i>
+         <i class="fa-solid fa-cart-shopping"></i>
+      </div>
+   </nav>
+   <div class="main">
+
+      <div class="men_text">
+         <h1>Fa rost de <span>pizza</span><br>foarte rapid</h1>
+      </div>
+<div class="main_image">
+   <img src="90em_fek6_210524.jpg" height="550">
+</div>
+      
+   </div>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quia dolorum esse exercitationem? Ullam optio praesentium assumenda neque et repellendus labore ad consectetur at, quidem placeat autem. Necessitatibus, dolorum cupiditate?
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate voluptatem facere ut veniam aut cumque accusantium at, atque facilis inventore pariatur adipisci laborum sequi quasi aliquid voluptas tenetur numquam commodi.
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae sit itaque et facere quisquam necessitatibus voluptatibus molestias vero aut consequuntur accusantium odio veniam nisi dolore eos, optio numquam, repudiandae doloribus.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum dolores tenetur enim. Dicta maiores dolores cupiditate illo ipsam. Quaerat doloribus, recusandae officiis soluta eaque molestiae sapiente unde quas quis aut.
+   </p>
+   <div class="main_btn">
+      <a href="#">Comanda acum</a>
+      <i class="fa-solid fa-angles-right"></i>
+   </div>
+</section>
+
+
+<!--Meniu-->
+
+<div class="meniu" id="Meniu">
+   <h1><span>MENIU</span></h1>
+   <div class="meniu_box">
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza NooB</h2>
+   <p>
+      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+   </p>
+   <h3>26,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star-half-stroke"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza NooB</h2>
+   <p>
+      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+   </p>
+   <h3>26,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star-half-stroke"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza NooB</h2>
+   <p>
+      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+   </p>
+   <h3>26,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star-half-stroke"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza NooB</h2>
+   <p>
+      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+   </p>
+   <h3>26,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star-half-stroke"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza NooB</h2>
+   <p>
+      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+   </p>
+   <h3>26,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star-half-stroke"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza NooB</h2>
+   <p>
+      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+   </p>
+   <h3>26,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star-half-stroke"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza NooB</h2>
+   <p>
+      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+   </p>
+   <h3>26,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star-half-stroke"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza NooB</h2>
+   <p>
+      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+   </p>
+   <h3>26,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star-half-stroke"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza NooB</h2>
+   <p>
+      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+   </p>
+   <h3>26,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star-half-stroke"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza NooB</h2>
+   <p>
+      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+   </p>
+   <h3>26,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star-half-stroke"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza NooB</h2>
+   <p>
+      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+   </p>
+   <h3>26,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star-half-stroke"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza NooB</h2>
+   <p>
+      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+   </p>
+   <h3>26,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star-half-stroke"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza NooB</h2>
+   <p>
+      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+   </p>
+   <h3>26,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star-half-stroke"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza NooB</h2>
+   <p>
+      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+   </p>
+   <h3>26,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star-half-stroke"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      
+
+   </div>
+</div>
+
+
+
+</body>
 </html>
