schimbare de pozde cu pizza smechere ce sa zic

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
       <div class="meniu_card">
          <div class="meniu_image">
-            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+            <img src="pizza3.avif" height="100">
          </div>
 
 <div class="small_card">
@@ -93,11 +93,11 @@
 </div>
 
 <div class="meniu_info">
-   <h2>Pizza NooB</h2>
+   <h2>Pizza Diavola</h2>
    <p>
-      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+      Ingrediente: sos de roșii,  mozzarella, salam picant
    </p>
-   <h3>26,00 RON</h3>
+   <h3>24,00 RON</h3>
    <div class="meniu_icon">
       <i class="fa-solid fa-star"></i>
       <i class="fa-solid fa-star"></i>
@@ -111,7 +111,7 @@
       </div>
       <div class="meniu_card">
          <div class="meniu_image">
-            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+            <img src="pizza4.webp" height="100">
          </div>
 
 <div class="small_card">
@@ -119,11 +119,89 @@
 </div>
 
 <div class="meniu_info">
-   <h2>Pizza NooB</h2>
+   <h2>Pizza quattro stagioni</h2>
    <p>
-      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+      Ingrediente: sos roșii Mozzarella, Chorizo, Șuncă, Ciuperci, Ardei Gras Verde
    </p>
    <h3>26,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="pizza5" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza Vegana</h2>
+   <p>
+      Ingrediente: sos roșii, măsline negre, ciuperci proaspete porumb și ardei gras
+   </p>
+   <h3>23,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star"></i>
+      <i class="fa-regular fa-star"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="pizza6.avif" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza Family</h2>
+   <p>
+      Ingrediente: sos de roșii, mozzarella, pepperoni, ardei capia, prosciuto crudo
+   </p>
+   <h3>40,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="pizza-crudo-rucola.jpg" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza crudo rucola</h2>
+   <p>
+      Ingrediente: Sos de roșii, mozzarella, prosciutto crudo, rucola, roșii cherry, parmezan.
+   </p>
+   <h3>27,00 RON</h3>
    <div class="meniu_icon">
       <i class="fa-solid fa-star"></i>
       <i class="fa-solid fa-star"></i>
@@ -137,7 +215,7 @@
       </div>
       <div class="meniu_card">
          <div class="meniu_image">
-            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+            <img src="pizza7.jpg" height="100">
          </div>
 
 <div class="small_card">
@@ -145,11 +223,63 @@
 </div>
 
 <div class="meniu_info">
-   <h2>Pizza NooB</h2>
+   <h2>Pizza Hawai</h2>
    <p>
-      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+      Ingrediente Sos de roșii, Mozzarella, Șunca, Ananas
    </p>
-   <h3>26,00 RON</h3>
+   <h3>22,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star-half-stroke"></i>
+      <i class="fa-regular fa-star"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="pizza8.jpg" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza Quatro Formaggi</h2>
+   <p>
+      Ingrediente: mozzarrella, formaggio stagionato, Pecorino, ricotta e Gorgonzola
+   </p>
+   <h3>34,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="pizza9.jpg" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza Capriciosa</h2>
+   <p>
+      Ingrediente: Sos rosii, mozzarella, sunca, ciuperci, masline
+   </p>
+   <h3>29,00 RON</h3>
    <div class="meniu_icon">
       <i class="fa-solid fa-star"></i>
       <i class="fa-solid fa-star"></i>
@@ -163,7 +293,7 @@
       </div>
       <div class="meniu_card">
          <div class="meniu_image">
-            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+            <img src="pizza10.webp" height="100">
          </div>
 
 <div class="small_card">
@@ -171,11 +301,63 @@
 </div>
 
 <div class="meniu_info">
-   <h2>Pizza NooB</h2>
+   <h2>Pizza Margerita</h2>
    <p>
-      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+      Ingrediente: sos de roșii, mozzarella
    </p>
-   <h3>26,00 RON</h3>
+   <h3>20,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="pizza11.webp" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza cu Piept de pui</h2>
+   <p>
+      Ingrediente: Sos de roșii, mozzarella, piept de pui, ciuperci, măsline, ardei gras, porumb, roșii
+   </p>
+   <h3>25,00 RON</h3>
+   <div class="meniu_icon">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star"></i>
+   </div>
+   <a href="#" class="menu_btn">Comanda acum</a>
+</div>
+
+      </div>
+      <div class="meniu_card">
+         <div class="meniu_image">
+            <img src="pizza12.jpg" height="100">
+         </div>
+
+<div class="small_card">
+   <i class="fa-regular fa-heart"></i>
+</div>
+
+<div class="meniu_info">
+   <h2>Pizza Mexicana</h2>
+   <p>
+      Ingrediente: Sos de Pizza, Mozzarella, Bacon, Chorizo, Șuncă, Jalapeno
+   </p>
+   <h3>31,00 RON</h3>
    <div class="meniu_icon">
       <i class="fa-solid fa-star"></i>
       <i class="fa-solid fa-star"></i>
@@ -189,7 +371,7 @@
       </div>
       <div class="meniu_card">
          <div class="meniu_image">
-            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+            <img src="pizza13.jpg" height="100">
          </div>
 
 <div class="small_card">
@@ -197,17 +379,17 @@
 </div>
 
 <div class="meniu_info">
-   <h2>Pizza NooB</h2>
+   <h2>Pizza Rustica</h2>
    <p>
-      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+      Ingrediente: Sos de roșii, bacon, mozzarella, ardei, ceapa, masline
    </p>
-   <h3>26,00 RON</h3>
+   <h3>27,00 RON</h3>
    <div class="meniu_icon">
       <i class="fa-solid fa-star"></i>
       <i class="fa-solid fa-star"></i>
       <i class="fa-solid fa-star"></i>
       <i class="fa-solid fa-star"></i>
-      <i class="fa-regular fa-star-half-stroke"></i>
+      <i class="fa-solid fa-star"></i>
    </div>
    <a href="#" class="menu_btn">Comanda acum</a>
 </div>
@@ -215,7 +397,7 @@
       </div>
       <div class="meniu_card">
          <div class="meniu_image">
-            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
+            <img src="pizza15.jpg" height="100">
          </div>
 
 <div class="small_card">
@@ -223,193 +405,11 @@
 </div>
 
 <div class="meniu_info">
-   <h2>Pizza NooB</h2>
+   <h2>Pizza de Post</h2>
    <p>
-      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
+      Ingrediente: Sos de Pizza, Branza Vegtala, Porumb, Roșii, Ardei Gras Verde, Măsline, Ceapă, Ciuperci
    </p>
-   <h3>26,00 RON</h3>
-   <div class="meniu_icon">
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-regular fa-star-half-stroke"></i>
-   </div>
-   <a href="#" class="menu_btn">Comanda acum</a>
-</div>
-
-      </div>
-      <div class="meniu_card">
-         <div class="meniu_image">
-            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
-         </div>
-
-<div class="small_card">
-   <i class="fa-regular fa-heart"></i>
-</div>
-
-<div class="meniu_info">
-   <h2>Pizza NooB</h2>
-   <p>
-      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
-   </p>
-   <h3>26,00 RON</h3>
-   <div class="meniu_icon">
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-regular fa-star-half-stroke"></i>
-   </div>
-   <a href="#" class="menu_btn">Comanda acum</a>
-</div>
-
-      </div>
-      <div class="meniu_card">
-         <div class="meniu_image">
-            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
-         </div>
-
-<div class="small_card">
-   <i class="fa-regular fa-heart"></i>
-</div>
-
-<div class="meniu_info">
-   <h2>Pizza NooB</h2>
-   <p>
-      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
-   </p>
-   <h3>26,00 RON</h3>
-   <div class="meniu_icon">
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-regular fa-star-half-stroke"></i>
-   </div>
-   <a href="#" class="menu_btn">Comanda acum</a>
-</div>
-
-      </div>
-      <div class="meniu_card">
-         <div class="meniu_image">
-            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
-         </div>
-
-<div class="small_card">
-   <i class="fa-regular fa-heart"></i>
-</div>
-
-<div class="meniu_info">
-   <h2>Pizza NooB</h2>
-   <p>
-      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
-   </p>
-   <h3>26,00 RON</h3>
-   <div class="meniu_icon">
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-regular fa-star-half-stroke"></i>
-   </div>
-   <a href="#" class="menu_btn">Comanda acum</a>
-</div>
-
-      </div>
-      <div class="meniu_card">
-         <div class="meniu_image">
-            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
-         </div>
-
-<div class="small_card">
-   <i class="fa-regular fa-heart"></i>
-</div>
-
-<div class="meniu_info">
-   <h2>Pizza NooB</h2>
-   <p>
-      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
-   </p>
-   <h3>26,00 RON</h3>
-   <div class="meniu_icon">
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-regular fa-star-half-stroke"></i>
-   </div>
-   <a href="#" class="menu_btn">Comanda acum</a>
-</div>
-
-      </div>
-      <div class="meniu_card">
-         <div class="meniu_image">
-            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
-         </div>
-
-<div class="small_card">
-   <i class="fa-regular fa-heart"></i>
-</div>
-
-<div class="meniu_info">
-   <h2>Pizza NooB</h2>
-   <p>
-      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
-   </p>
-   <h3>26,00 RON</h3>
-   <div class="meniu_icon">
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-regular fa-star-half-stroke"></i>
-   </div>
-   <a href="#" class="menu_btn">Comanda acum</a>
-</div>
-
-      </div>
-      <div class="meniu_card">
-         <div class="meniu_image">
-            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
-         </div>
-
-<div class="small_card">
-   <i class="fa-regular fa-heart"></i>
-</div>
-
-<div class="meniu_info">
-   <h2>Pizza NooB</h2>
-   <p>
-      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
-   </p>
-   <h3>26,00 RON</h3>
-   <div class="meniu_icon">
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-regular fa-star-half-stroke"></i>
-   </div>
-   <a href="#" class="menu_btn">Comanda acum</a>
-</div>
-
-      </div>
-      <div class="meniu_card">
-         <div class="meniu_image">
-            <img src="photo-1458642849426-cfb724f15ef7.avif" height="100">
-         </div>
-
-<div class="small_card">
-   <i class="fa-regular fa-heart"></i>
-</div>
-
-<div class="meniu_info">
-   <h2>Pizza NooB</h2>
-   <p>
-      Ingrediente: sos de roșii, mozzarella, pepperoni, măsline
-   </p>
-   <h3>26,00 RON</h3>
+   <h3>30,00 RON</h3>
    <div class="meniu_icon">
       <i class="fa-solid fa-star"></i>
       <i class="fa-solid fa-star"></i>
