--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 </div>
       
    </div>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quia dolorum esse exercitationem? Ullam optio praesentium assumenda neque et repellendus labore ad consectetur at, quidem placeat autem. Necessitatibus, dolorum cupiditate?
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate voluptatem facere ut veniam aut cumque accusantium at, atque facilis inventore pariatur adipisci laborum sequi quasi aliquid voluptas tenetur numquam commodi.
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae sit itaque et facere quisquam necessitatibus voluptatibus molestias vero aut consequuntur accusantium odio veniam nisi dolore eos, optio numquam, repudiandae doloribus.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum dolores tenetur enim. Dicta maiores dolores cupiditate illo ipsam. Quaerat doloribus, recusandae officiis soluta eaque molestiae sapiente unde quas quis aut.
+   <p>
+      AI NEVOIE DE COORDONAREA LIVRĂRILOR DE MANCARE ÎN MULTIPLE LOCAȚII?
+      Lasă pe Noobz’s Pizza Events să se ocupe.
+      Noobz’s Pizza Events este serviciul pe care îl căutai și nu-l găseai când aveai pofta de o pizza
    </p>
    <div class="main_btn">
       <a href="#">Comanda acum</a>
