--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
    <p>
       AI NEVOIE DE COORDONAREA LIVRĂRILOR DE MANCARE ÎN MULTIPLE LOCAȚII?
       Lasă pe Noobz’s Pizza Events să se ocupe.
-      Noobz’s Pizza Events este serviciul pe care îl căutai și nu-l găseai când aveai pofta de o pizza
+      Noobz’s Pizza Events este serviciul pe care îl căutai și nu-l găseai atunci când aveai pofta de o pizza
    </p>
    <div class="main_btn">
       <a href="#">Comanda acum</a>
