ultima schimbare presupun :p

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-   
+
 <section id="Acasa">
    <nav>
       <div class="logo">
@@ -18,8 +18,6 @@
       <ul>
          <li><a href="#Acasa">Acasa</a></li>
          <li><a href="#Meniu">Meniu</a></li>
-         <li><a href="#Galerie">Galerie</a></li>
-         <li><a href="#Review">Review</a></li>
          <li><a href="#Comanda">Comanda</a></li>
 
       </ul>
@@ -41,8 +39,8 @@
    </div>
    <p>
       AI NEVOIE DE COORDONAREA LIVRĂRILOR DE MANCARE ÎN MULTIPLE LOCAȚII?
-      Lasă pe Noobz’s Pizza Events să se ocupe.
-      Noobz’s Pizza Events este serviciul pe care îl căutai și nu-l găseai atunci când aveai pofta de o pizza
+      Lasă-i pe Noobz’s Pizza să se ocupe.
+      Noobz’s Pizza este serviciul pe care îl căutai și nu-l găseai atunci când aveai pofta de o pizza
    </p>
    <div class="main_btn">
       <a href="#">Comanda acum</a>
@@ -422,6 +420,51 @@
 
       </div>
       
+
+   </div>
+</div>
+
+
+<!--Comanda-->
+<div class="comanda" id="Comanda">
+   <h1><span>Comanda</span> Acum</h1>
+
+   <div class="comanda_main">
+      
+      <div class="comanda_image">
+         <img src="">
+      </div>
+
+<form action="#">
+
+   <div class="input">
+      <p>Nume</p>
+      <input type="text" placeholder="Numele tau">
+   </div>
+
+   <div class="input">
+      <p>Email</p>
+      <input type="email" placeholder="adresa ta de email">
+   </div>
+ 
+   <div class="input">
+      <p>Numar</p>
+      <input placeholder="numarul tau de telefon">
+      </div>
+
+      <div class="input">
+      <p>Comanda ta</p>
+      <input placeholder="pizza">
+   </div>
+
+   <div class="input">
+      <p>Adresa</p>
+      <input placeholder="adresa ta">
+   </div>
+
+<a href="#" class="comanda_btn">Comanda Acum</a>
+
+</form>
 
    </div>
 </div>
